# magneto

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  database.py  package-lock.json  pyproject.toml  serverless.yml
magneto/: mutant_identifier.py  sequence_generator.py  sequence_identifier.py
tests/: Makefile  test_mutant_identifier.py  test_sequence_generator.py  test_sequence_identifier.py
